# mcp-server

./: .gitignore  DEMO.md  Dockerfile  README.md  pyproject.toml
demo_project/: Dockerfile  README.md  package.json  pyproject.toml  requirements.txt
demo_project/docs/: notes.md
demo_project/metadata/: licenses.json
demo_project/src/: app.py  auth.py  repository.py  service.py  utils.py
demo_project/tests/: test_auth.py  test_service.py
src/repohealth_mcp/: __init__.py  app.py  cli.py  config.py  server.py  smoke.py
src/repohealth_mcp/analyzers/: __init__.py  ci_logs.py  dependencies.py  report.py  tech_debt.py
src/repohealth_mcp/core/: __init__.py  constants.py  errors.py  models.py  paths.py  scoring.py
src/repohealth_mcp/transport/: __init__.py  health.py  mcp_factory.py
src/repohealth_mcp/utils/: __init__.py  file_io.py  text.py
tests/: test_ci_logs.py  test_cli.py  test_dependencies.py  test_health.py  test_mcp.py  test_report.py  test_smoke.py  test_tech_debt.py
